--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <p id="pc"><p>
 </footer>
 <script src="script.js"></script>
-<script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 <!--
 <script src="CDN/library"></script>
 ex= <script src"https://teach.gemimo.com/bouncy.js"></script>
