--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 <header>
-<h1 id="h1"></h1>
+<div class="container">
+<h1 id="h1"><span class="auto-type"></span></h1>
+</div>
 </header>
 <main>
   
@@ -70,6 +72,14 @@
 </footer>
 <script src="script.js"></script>
 <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+<script>
+var typed = new Typed(".auto-type", {  
+  strings :["Steven","Miller","Developer"],     ]
+  typeSpeed :150,
+  backSpeed :150,
+  loop :true
+    })
+</script>
 <!--
 <script src="CDN/library"></script>
 ex= <script src"https://teach.gemimo.com/bouncy.js"></script>
