--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 <script>
 var typed = new Typed(".auto-type", {  
-  strings :["Steven","Miller","Developer"],     ]
+  strings :["Steven","Miller","Developer"],    
   typeSpeed :150,
   backSpeed :150,
   loop :true
