--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <header>
 <div class="container">
-<h1 id="h1"><span class="auto-type"></span></h1>
+<h1 id="h1"><span class="auto-typeh1"></span></h1>
 </div>
 </header>
 <main>
@@ -15,7 +15,9 @@
 <img id="selfportrait" src="0C04FB8A-647A-47AD-B39B-5573D3C59627.png">
   
 <div id="am">
-<h2 id="h2am"><h2>
+  <div class="container">
+  <h2 id="h2am"><span class="auto-typeh2am"></span></h2>
+  </div>
 <p id="pam"><p>
 </div>
 <div id="edu">
@@ -73,12 +75,19 @@
 <script src="script.js"></script>
 <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 <script>
-var typed = new Typed(".auto-type", {  
+var typed = new Typed(".auto-typeh1", {  
   strings :["Steven","Miller","Developer"],    
   typeSpeed :150,
   backSpeed :150,
   loop :true
     })
+var typed = new Typed(".auto-typeh2am", {  
+  strings :["About","Me"],    
+  typeSpeed :150,
+  backSpeed :150,
+  loop :true
+    })
+    
 </script>
 <!--
 <script src="CDN/library"></script>
