--- a/index.html
+++ b/index.html
@@ -21,14 +21,20 @@
 <p id="pam"><p>
 </div>
 <div id="edu">
-<h2 id="h2edu"></h2>
+ <div class="container">
+  <h2 id="h2edu"><span class="auto-typeh2edu"></span></h2>
+  </div>
 <p id="pedu"></p>
 </div>
 <div id="ex">
-<h2 id="h2ex"></h2>
+<div class="container">
+  <h2 id="h2ex"><span class="auto-typeh2ex"></span></h2>
+  </div>
 <p id="pex"></p>
 </div>
-<h2 id="h2co" class="d"></h2>
+<div class="container">
+  <h2 id="h2co"><span class="auto-typeh2co"></span></h2>
+  </div>
 <div id="co" class="co">
 <img src="" alt="html" class="co" id="htmlco">
   <img src="" alt="css" class="co" id="cssco">
@@ -44,7 +50,9 @@
 </div>
 	
 <div id="ce" class="ce">
-<h2 id="h2ce"></h2>
+<div class="container">
+<h2 id="h2ce"><span class="auto-typeh2ce"></span></h2>
+</div>
 <div class="cechild"><iframe class="d" src="HTML certification .pdf" width="600px" height="850px"></iframe></div>
 <div class="cechild" ><iframe class="d" src="JavaScriptcertificate.pdf" width="600px" height="850px"></iframe></div>
 <div class="cechild" width="100%" height="850px"><a href="https://api2.sololearn.com/v2/certificates/CC-U4L6ZJBX/image/jpg" width="100%" height="850px">
@@ -87,7 +95,30 @@ var typed = new Typed(".auto-typeh2am", {
   backSpeed :150,
   loop :true
     })
-    
+    var typed = new Typed(".auto-typeh2edu", {  
+  strings :["Education"],    
+  typeSpeed :150,
+  backSpeed :150,
+  loop :true
+    })
+    var typed = new Typed(".auto-typeh2ex", {  
+  strings :["Experience"],    
+  typeSpeed :150,
+  backSpeed :150,
+  loop :true
+    })
+    var typed = new Typed(".auto-typeh2co", {  
+  strings :["Competencies"],    
+  typeSpeed :150,
+  backSpeed :150,
+  loop :true
+    })
+    var typed = new Typed(".auto-typeh2ce", {  
+  strings :["Certificates"],    
+  typeSpeed :150,
+  backSpeed :150,
+  loop :true
+    })
 </script>
 <!--
 <script src="CDN/library"></script>
