--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   
 <div id="am">
   <div class="container">
-  <h2 id="h2am"><span class="auto-typeh2am"></span></h2>
+  <h2 id="h2am">About<span class="auto-typeh2am"></span></h2>
   </div>
 <p id="pam"><p>
 </div>
@@ -90,7 +90,7 @@ var typed = new Typed(".auto-typeh1", {
   loop :true
     })
 var typed = new Typed(".auto-typeh2am", {  
-  strings :["About","Me"],    
+  strings :["Me"],    
   typeSpeed :150,
   backSpeed :150,
   loop :true
