--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
 </div>
 <div id="edu">
  <div class="container">
-  <h2 id="h2edu"><span class="auto-typeh2edu"></span></h2>
+  <h2 id="h2edu">My<span class="auto-typeh2edu"></span></h2>
   </div>
 <p id="pedu"></p>
 </div>
 <div id="ex">
 <div class="container">
-  <h2 id="h2ex"><span class="auto-typeh2ex"></span></h2>
+  <h2 id="h2ex">My<span class="auto-typeh2ex"></span></h2>
   </div>
 <p id="pex"></p>
 </div>
 <div class="container">
-  <h2 id="h2co"><span class="auto-typeh2co"></span></h2>
+  <h2 id="h2co">My<span class="auto-typeh2co"></span></h2>
   </div>
 <div id="co" class="co">
 <img src="" alt="html" class="co" id="htmlco">
@@ -51,7 +51,7 @@
 	
 <div id="ce" class="ce">
 <div class="container">
-<h2 id="h2ce"><span class="auto-typeh2ce"></span></h2>
+<h2 id="h2ce">My<span class="auto-typeh2ce"></span></h2>
 </div>
 <div class="cechild"><iframe class="d" src="HTML certification .pdf" width="600px" height="850px"></iframe></div>
 <div class="cechild" ><iframe class="d" src="JavaScriptcertificate.pdf" width="600px" height="850px"></iframe></div>
