--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <header>
 <div class="container">
-<h1 id="h1"><span class="auto-typeh1"></span></h1>
+<h1 id="h1">Hi,I'm<span class="auto-typeh1"></span></h1>
 </div>
 </header>
 <main>
