--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>Steven Miller</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
+<div id="animation-wrapper">
 <body id="body">
 <header>
 <div class="container">
@@ -102,5 +103,6 @@ VANTA.NET({
 <script src="CDN/library"></script>
 ex= <script src"https://teach.gemimo.com/bouncy.js"></script>
  -->
-</body> 
+</body>
+</div>
 </html>
