--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <script src="vanta.net.min.js"></script>
 <script>
 VANTA.NET({
-  el: "#body",
+  el: "#animation-wrapper",
   mouseControls: true,
   touchControls: true,
   gyroControls: false,
