--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body id="body">
-  <div id="animation-wrapper">
+  <div id="animation-wrapper"></div>
 <header>
 <div class="container">
 <h1 id="h1">Hi,I'm<span class="auto-typeh1"></span></h1>
