--- a/index.html
+++ b/index.html
@@ -64,10 +64,14 @@
 
 </main>
 <footer id="footer">
-<h3 id="h3con"></h3>
+<div class="container">
+<h3 id="h3con">Contact<span class="auto-typeh3con"></span></h3>
+</div>
 <p id="pem"></p>
 <p id="pp"></p>
-<h3 id="h3f"></h3>
+<div class="container">
+<h3 id="h3f">Follow<span class="auto-typeh3f"></span></h3>
+</div>
 <div id="f" class="f">
 <a href="https://www.twitter.com/@sem2093" class="d">
   <img src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/twitter_circle-512.png" class="e" alt="Twitter"style="width: 100px; height: 100px;">
