--- a/index.html
+++ b/index.html
@@ -20,19 +20,26 @@
   <div class="container">
   <h2 id="h2am">About<span class="auto-typeh2am"></span></h2>
   </div>
-<p id="pam"><p>
+  <div class="container">
+<p id="pam">I'm<span class="auto-typepam"></span></p>
+</div>
 </div>
 <div id="edu">
  <div class="container">
   <h2 id="h2edu">My<span class="auto-typeh2edu"></span></h2>
   </div>
-<p id="pedu"></p>
+ <div class="container">
+<p id="pedu">I've<span class="auto-typepedu"></span></p>
+</div>
 </div>
 <div id="ex">
 <div class="container">
   <h2 id="h2ex">My<span class="auto-typeh2ex"></span></h2>
   </div>
 <p id="pex"></p>
+ <div class="container">
+<p id="pex">I've been<span class="auto-typepex"></span></p>
+</div>
 </div>
 <div class="container">
   <h2 id="h2co">My<span class="auto-typeh2co"></span></h2>
