--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div id="animation-wrapper"></div>
 <header>
 <div class="container">
-<h1 id="h1">Hi,I'm<span class="auto-typeh1"></span></h1>
+<h1 id="h1">Hi! I'm<span class="auto-typeh1"></span></h1>
 </div>
 </header>
 <main>
@@ -37,7 +37,7 @@
   <h2 id="h2ex">My<span class="auto-typeh2ex"></span></h2>
   </div>
  <div class="container">
-<p id="pex">I've been<span class="auto-typepex"></span></p>
+<p id="pex">I've been a<span class="auto-typepex"></span></p>
 </div>
 </div>
 <div class="container">
