--- a/index.html
+++ b/index.html
@@ -9,39 +9,39 @@
   <div id="animation-wrapper"></div>
 <header>
 <div class="container">
-<h1 id="h1">Hi! I'm<br><span class="auto-typeh1"></span></h1>
+<h1 id="h1">Hi! I'm<span class="auto-typeh1"></span></h1>
 </div>
 </header>
 <main>
   
-<img id="selfportrait" src="0C04FB8A-647A-47AD-B39B-5573D3C59627.png">
+<img id="selfportrait" src="CF03098E-1233-48B3-A7EB-7DF1F328BBD6.png">
   
 <div id="am">
   <div class="container">
-  <h2 id="h2am">About<br><span class="auto-typeh2am"></span></h2>
+  <h2 id="h2am">About<span class="auto-typeh2am"></span></h2>
   </div>
   <div class="container">
-<p id="pam">I'm<br><span class="auto-typepam"></span></p>
+<p id="pam">I'm<span class="auto-typepam"></span></p>
 </div>
 </div>
 <div id="edu">
  <div class="container">
-  <h2 id="h2edu">My<br><span class="auto-typeh2edu"></span></h2>
+  <h2 id="h2edu">My<span class="auto-typeh2edu"></span></h2>
   </div>
  <div class="container">
-<p id="pedu">I've<br><span class="auto-typepedu"></span></p>
+<p id="pedu">I've<span class="auto-typepedu"></span></p>
 </div>
 </div>
 <div id="ex">
 <div class="container">
-  <h2 id="h2ex">My<br><span class="auto-typeh2ex"></span></h2>
+  <h2 id="h2ex">My<span class="auto-typeh2ex"></span></h2>
   </div>
  <div class="container">
-<p id="pex">I've been a<br><span class="auto-typepex"></span></p>
+<p id="pex">I've been a<span class="auto-typepex"></span></p>
 </div>
 </div>
 <div class="container">
-  <h2 id="h2co">My<br><span class="auto-typeh2co"></span></h2>
+  <h2 id="h2co">My<span class="auto-typeh2co"></span></h2>
   </div>
 <div id="co" class="co">
 <img src="" alt="html" class="co" id="htmlco">
@@ -59,7 +59,7 @@
 	
 <div id="ce" class="ce">
 <div class="container">
-<h2 id="h2ce">My<br><span class="auto-typeh2ce"></span></h2>
+<h2 id="h2ce">My<span class="auto-typeh2ce"></span></h2>
 </div>
 <div class="cechild"><iframe class="d" src="HTML certification .pdf" width="600px" height="850px"></iframe></div>
 <div class="cechild" ><iframe class="d" src="JavaScriptcertificate.pdf" width="600px" height="850px"></iframe></div>
@@ -71,12 +71,12 @@
 </main>
 <footer id="footer">
 <div class="container">
-<h3 id="h3con">Contact<br><span class="auto-typeh3con"></span></h3>
+<h3 id="h3con">Contact<span class="auto-typeh3con"></span></h3>
 </div>
 <p id="pem"></p>
 <p id="pp"></p>
 <div class="container">
-<h3 id="h3f">Follow<br><span class="auto-typeh3f"></span></h3>
+<h3 id="h3f">Follow<span class="auto-typeh3f"></span></h3>
 </div>
 <div id="f" class="f">
 <a href="https://www.twitter.com/@sem2093" class="d">
