--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
 <title>Steven Miller</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
-
 <body id="body">
   <div id="animation-wrapper"></div>
+<!-------------header----------------->
 <header>
 <div class="container">
 <h1 id="h1">Hi! I'm<span class="auto-typeh1"></span></h1>
 </div>
 </header>
+<!--        -->
 <main>
+<!--        -->
 <div id="am">
   <div class="container">
   <h2 id="h2am">About<span class="auto-typeh2am"></span></h2>
@@ -21,6 +23,7 @@
 <p id="pam">I'm<span class="auto-typepam"></span></p>
 </div>
 </div>
+<!--        -->
 <div id="edu">
  <div class="container">
   <h2 id="h2edu">My<span class="auto-typeh2edu"></span></h2>
@@ -29,6 +32,7 @@
 <p id="pedu">I've<span class="auto-typepedu"></span></p>
 </div>
 </div>
+<!--        -->
 <div id="ex">
 <div class="container">
   <h2 id="h2ex">My<span class="auto-typeh2ex"></span></h2>
@@ -37,6 +41,7 @@
 <p id="pex">I've been a<span class="auto-typepex"></span></p>
 </div>
 </div>
+<!--        -->
 <div class="container">
   <h2 id="h2co">My<span class="auto-typeh2co"></span></h2>
   </div>
@@ -53,7 +58,7 @@
 <img src=""alt="react" class="co" id="reactco">
 <img src=""alt="github" class="co" id="githubco">
 </div>
-	
+	<!--        -->
 <div id="ce" class="ce">
 <div class="container">
 <h2 id="h2ce">My<span class="auto-typeh2ce"></span></h2>
@@ -64,14 +69,16 @@
 <img src="65C8A70C-95F7-453D-8221-F6040F565406.jpeg" alt="sololearnhtmlcertificate" width="100%" height="850px" class="ce">
 </a></div>
 </div>
-
+<!--        -->
 </main>
 <footer id="footer">
+<!--        -->
 <div class="container">
 <h3 id="h3con">Contact<span class="auto-typeh3con"></span></h3>
 </div>
 <p id="pem"></p>
 <p id="pp"></p>
+<!--        -->
 <div class="container">
 <h3 id="h3f">Follow<span class="auto-typeh3f"></span></h3>
 </div>
@@ -86,7 +93,7 @@
  <img src="https://cdn-icons-png.flaticon.com/512/124/124010.png" class="e" alt="Facebook"style="width: 100px; height: 100px;">
 	</a>
 </div>
-
+<!--        -->
 <p id="pc"><p>
 </footer>
 <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
