--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>Steven Miller</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body id="body">
   <div id="animation-wrapper"></div>
@@ -46,26 +47,26 @@
   <h2 id="h2co">My<span class="auto-typeh2co"></span></h2>
   </div>
 <div id="co" class="co">
-<img src="" alt="html" class="co" id="htmlco">
-  <img src="" alt="css" class="co" id="cssco">
-  <img src="" alt="javascript" class="co" id="jsco">
-  <img src="" alt="sql" class="co"id="sqlco">
-<img src="" alt="python" class="co"id="pythonco">
-<img src="" alt="json" class="co" id="jsonco">
-<img src="" alt="c#" class="co" id="csharpco">
-<img src="" alt="c++" class="co" id="cppco">
-<img src=""alt="git" class="co" id="gitco">
-<img src=""alt="react" class="co" id="reactco">
-<img src=""alt="github" class="co" id="githubco">
+<img src="" alt="html" class="co" id="htmlco" data-aos="fade-in">
+  <img src="" alt="css" class="co" id="cssco" data-aos="fade-in">
+  <img src="" alt="javascript" class="co" id="jsco" data-aos="fade-in">
+  <img src="" alt="sql" class="co"id="sqlco" data-aos="fade-in">
+<img src="" alt="python" class="co"id="pythonco" data-aos="fade-in">
+<img src="" alt="json" class="co" id="jsonco" data-aos="fade-in">
+<img src="" alt="c#" class="co" id="csharpco" data-aos="fade-in">
+<img src="" alt="c++" class="co" id="cppco" data-aos="fade-in">
+<img src=""alt="git" class="co" id="gitco" data-aos="fade-in">
+<img src=""alt="react" class="co" id="reactco" data-aos="fade-in">
+<img src=""alt="github" class="co" id="githubco" data-aos="fade-in">
 </div>
 	<!--        -->
 <div id="ce" class="ce">
 <div class="container">
 <h2 id="h2ce">My<span class="auto-typeh2ce"></span></h2>
 </div>
-<div class="cechild"><iframe class="d" src="HTML certification .pdf" width="600px" height="850px"></iframe></div>
-<div class="cechild" ><iframe class="d" src="JavaScriptcertificate.pdf" width="600px" height="850px"></iframe></div>
-<div class="cechild" width="100%" height="850px"><a href="https://api2.sololearn.com/v2/certificates/CC-U4L6ZJBX/image/jpg" width="100%" height="850px">
+<div class="cechild" data-aos="fade-in"><iframe class="d" src="HTML certification .pdf" width="600px" height="850px"></iframe></div>
+<div class="cechild" data-aos="fade-in"><iframe class="d" src="JavaScriptcertificate.pdf" width="600px" height="850px"></iframe></div>
+<div class="cechild" width="100%" height="850px"data-aos="fade-in"><a href="https://api2.sololearn.com/v2/certificates/CC-U4L6ZJBX/image/jpg" width="100%" height="850px">
 <img src="65C8A70C-95F7-453D-8221-F6040F565406.jpeg" alt="sololearnhtmlcertificate" width="100%" height="850px" class="ce">
 </a></div>
 </div>
@@ -100,6 +101,10 @@
 <script src="three.r134.min.js"></script>
 <script src="vanta.net.min.js"></script>
 <script src="script.js"></script>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 <!--
 <script src="CDN/library"></script>
 ex= <script src"https://teach.gemimo.com/bouncy.js"></script>
