--- a/index.html
+++ b/index.html
@@ -103,7 +103,10 @@
 <script src="script.js"></script>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
-    AOS.init();
+    AOS.init({
+    duration:3000
+    
+    });
   </script>
 <!--
 <script src="CDN/library"></script>
