--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-------------header----------------->
 <header>
 <div class="container">
-<h1 id="h1">Hi! I'm<span class="auto-typeh1"></span></h1>
+<h1 data-aos="slide-left"id="h1">Hi! I'm<span class="auto-typeh1"></span></h1>
 </div>
 </header>
 <!--        -->
@@ -18,7 +18,7 @@
 <!--        -->
 <div id="am">
   <div class="container">
-  <h2 id="h2am">About<span class="auto-typeh2am"></span></h2>
+  <h2 data-aos="slide-left" id="h2am">About<span class="auto-typeh2am"></span></h2>
   </div>
   <div class="container">
 <p id="pam">I'm<span class="auto-typepam"></span></p>
@@ -27,7 +27,7 @@
 <!--        -->
 <div id="edu">
  <div class="container">
-  <h2 id="h2edu">My<span class="auto-typeh2edu"></span></h2>
+  <h2 data-aos="slide-left" id="h2edu">My<span class="auto-typeh2edu"></span></h2>
   </div>
  <div class="container">
 <p id="pedu">I've<span class="auto-typepedu"></span></p>
@@ -36,7 +36,7 @@
 <!--        -->
 <div id="ex">
 <div class="container">
-  <h2 id="h2ex">My<span class="auto-typeh2ex"></span></h2>
+  <h2 data-aos="slide-left" id="h2ex">My<span class="auto-typeh2ex"></span></h2>
   </div>
  <div class="container">
 <p id="pex">I've been a<span class="auto-typepex"></span></p>
@@ -44,29 +44,29 @@
 </div>
 <!--        -->
 <div class="container">
-  <h2 id="h2co">My<span class="auto-typeh2co"></span></h2>
+  <h2 data-aos="slide-left" id="h2co">My<span class="auto-typeh2co"></span></h2>
   </div>
 <div id="co" class="co">
-<img src="" alt="html" class="co" id="htmlco" data-aos="fade-in">
-  <img src="" alt="css" class="co" id="cssco" data-aos="fade-in">
-  <img src="" alt="javascript" class="co" id="jsco" data-aos="fade-in">
-  <img src="" alt="sql" class="co"id="sqlco" data-aos="fade-in">
-<img src="" alt="python" class="co"id="pythonco" data-aos="fade-in">
-<img src="" alt="json" class="co" id="jsonco" data-aos="fade-in">
-<img src="" alt="c#" class="co" id="csharpco" data-aos="fade-in">
-<img src="" alt="c++" class="co" id="cppco" data-aos="fade-in">
-<img src=""alt="git" class="co" id="gitco" data-aos="fade-in">
-<img src=""alt="react" class="co" id="reactco" data-aos="fade-in">
-<img src=""alt="github" class="co" id="githubco" data-aos="fade-in">
+<img src="" alt="html" class="co" id="htmlco" data-aos="slide-left">
+  <img src="" alt="css" class="co" id="cssco" data-aos="slide-left">
+  <img src="" alt="javascript" class="co" id="jsco" data-aos="slide-left">
+  <img src="" alt="sql" class="co"id="sqlco" data-aos="slide-left">
+<img src="" alt="python" class="co"id="pythonco" data-aos="slide-left">
+<img src="" alt="json" class="co" id="jsonco" data-aos="slide-left">
+<img src="" alt="c#" class="co" id="csharpco" data-aos="slide-left">
+<img src="" alt="c++" class="co" id="cppco" data-aos="slide-left">
+<img src=""alt="git" class="co" id="gitco" data-aos="slide-left">
+<img src=""alt="react" class="co" id="reactco" data-aos="slide-left">
+<img src=""alt="github" class="co" id="githubco" data-aos="slide-left">
 </div>
 	<!--        -->
 <div id="ce" class="ce">
 <div class="container">
-<h2 id="h2ce">My<span class="auto-typeh2ce"></span></h2>
+<h2 data-aos="slide-left" id="h2ce">My<span class="auto-typeh2ce"></span></h2>
 </div>
-<div class="cechild" data-aos="fade-in"><iframe class="d" src="HTML certification .pdf" width="600px" height="850px"></iframe></div>
-<div class="cechild" data-aos="fade-in"><iframe class="d" src="JavaScriptcertificate.pdf" width="600px" height="850px"></iframe></div>
-<div class="cechild" width="100%" height="850px"data-aos="fade-in"><a href="https://api2.sololearn.com/v2/certificates/CC-U4L6ZJBX/image/jpg" width="100%" height="850px">
+<div class="cechild" data-aos="slide-left"><iframe class="d" src="HTML certification .pdf" width="600px" height="850px"></iframe></div>
+<div class="cechild" data-aos="slide-left"><iframe class="d" src="JavaScriptcertificate.pdf" width="600px" height="850px"></iframe></div>
+<div class="cechild" width="100%" height="850px"data-aos="slide-left"><a href="https://api2.sololearn.com/v2/certificates/CC-U4L6ZJBX/image/jpg" width="100%" height="850px">
 <img src="65C8A70C-95F7-453D-8221-F6040F565406.jpeg" alt="sololearnhtmlcertificate" width="100%" height="850px" class="ce">
 </a></div>
 </div>
@@ -75,13 +75,13 @@
 <footer id="footer">
 <!--        -->
 <div class="container">
-<h3 id="h3con">Contact<span class="auto-typeh3con"></span></h3>
+<h3 data-aos="slide-left" id="h3con">Contact<span class="auto-typeh3con"></span></h3>
 </div>
 <p id="pem"></p>
 <p id="pp"></p>
 <!--        -->
 <div class="container">
-<h3 id="h3f">Follow<span class="auto-typeh3f"></span></h3>
+<h3 data-aos="slide-left" id="h3f">Follow<span class="auto-typeh3f"></span></h3>
 </div>
 <div id="f" class="f">
 <a href="https://www.twitter.com/@sem2093" class="d">
