--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-------------header----------------->
 <header>
 <div class="container">
-<h1 data-aos="slide-left"id="h1">Hi! I'm<span class="auto-typeh1"></span></h1>
+<h1 id="h1">Hi! I'm<span class="auto-typeh1"></span></h1>
 </div>
 </header>
 <!--        -->
@@ -18,7 +18,7 @@
 <!--        -->
 <div id="am">
   <div class="container">
-  <h2 data-aos="slide-left" id="h2am">About<span class="auto-typeh2am"></span></h2>
+  <h2 id="h2am">About<span class="auto-typeh2am"></span></h2>
   </div>
   <div class="container">
 <p id="pam">I'm<span class="auto-typepam"></span></p>
@@ -27,7 +27,7 @@
 <!--        -->
 <div id="edu">
  <div class="container">
-  <h2 data-aos="slide-left" id="h2edu">My<span class="auto-typeh2edu"></span></h2>
+  <h2 id="h2edu">My<span class="auto-typeh2edu"></span></h2>
   </div>
  <div class="container">
 <p id="pedu">I've<span class="auto-typepedu"></span></p>
@@ -36,7 +36,7 @@
 <!--        -->
 <div id="ex">
 <div class="container">
-  <h2 data-aos="slide-left" id="h2ex">My<span class="auto-typeh2ex"></span></h2>
+  <h2  id="h2ex">My<span class="auto-typeh2ex"></span></h2>
   </div>
  <div class="container">
 <p id="pex">I've been a<span class="auto-typepex"></span></p>
@@ -44,7 +44,7 @@
 </div>
 <!--        -->
 <div class="container">
-  <h2 data-aos="slide-left" id="h2co">My<span class="auto-typeh2co"></span></h2>
+  <h2 id="h2co">My<span class="auto-typeh2co"></span></h2>
   </div>
 <div id="co" class="co">
 <img src="" alt="html" class="co" id="htmlco" data-aos="slide-left">
@@ -75,13 +75,13 @@
 <footer id="footer">
 <!--        -->
 <div class="container">
-<h3 data-aos="slide-left" id="h3con">Contact<span class="auto-typeh3con"></span></h3>
+<h3 id="h3con">Contact<span class="auto-typeh3con"></span></h3>
 </div>
 <p id="pem"></p>
 <p id="pp"></p>
 <!--        -->
 <div class="container">
-<h3 data-aos="slide-left" id="h3f">Follow<span class="auto-typeh3f"></span></h3>
+<h3 id="h3f">Follow<span class="auto-typeh3f"></span></h3>
 </div>
 <div id="f" class="f">
 <a href="https://www.twitter.com/@sem2093" class="d">
