--- a/index.html
+++ b/index.html
@@ -47,22 +47,22 @@
   <h2 id="h2co">My<span class="auto-typeh2co"></span></h2>
   </div>
 <div id="co" class="co">
-<img src="" alt="html" class="co" id="htmlco" data-aos="slide-left">
-  <img src="" alt="css" class="co" id="cssco" data-aos="slide-left">
-  <img src="" alt="javascript" class="co" id="jsco" data-aos="slide-left">
-  <img src="" alt="sql" class="co"id="sqlco" data-aos="slide-left">
-<img src="" alt="python" class="co"id="pythonco" data-aos="slide-left">
-<img src="" alt="json" class="co" id="jsonco" data-aos="slide-left">
-<img src="" alt="c#" class="co" id="csharpco" data-aos="slide-left">
-<img src="" alt="c++" class="co" id="cppco" data-aos="slide-left">
-<img src=""alt="git" class="co" id="gitco" data-aos="slide-left">
-<img src=""alt="react" class="co" id="reactco" data-aos="slide-left">
-<img src=""alt="github" class="co" id="githubco" data-aos="slide-left">
+<img src="" alt="html" class="co" id="htmlco" data-aos="fade-in">
+  <img src="" alt="css" class="co" id="cssco" data-aos="fade-in">
+  <img src="" alt="javascript" class="co" id="jsco" data-aos="fade-in">
+  <img src="" alt="sql" class="co"id="sqlco" data-aos="fade-in">
+<img src="" alt="python" class="co"id="pythonco" data-aos="fade-in">
+<img src="" alt="json" class="co" id="jsonco" data-aos="fade-in">
+<img src="" alt="c#" class="co" id="csharpco" data-aos="fade-in">
+<img src="" alt="c++" class="co" id="cppco" data-aos="fade-in">
+<img src=""alt="git" class="co" id="gitco" data-aos="fade-in">
+<img src=""alt="react" class="co" id="reactco" data-aos="fade-in">
+<img src=""alt="github" class="co" id="githubco" data-aos="fade-in">
 </div>
 	<!--        -->
 <div id="ce" class="ce">
 <div class="container">
-<h2 data-aos="slide-left" id="h2ce">My<span class="auto-typeh2ce"></span></h2>
+<h2 id="h2ce">My<span class="auto-typeh2ce"></span></h2>
 </div>
 <div class="cechild" data-aos="slide-left"><iframe class="d" src="HTML certification .pdf" width="600px" height="850px"></iframe></div>
 <div class="cechild" data-aos="slide-left"><iframe class="d" src="JavaScriptcertificate.pdf" width="600px" height="850px"></iframe></div>
