--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 <div class="container">
 <h2 id="h2ce">My<span class="auto-typeh2ce"></span></h2>
 </div>
-<div class="cechild" data-aos="slide-left"><iframe class="d" src="HTML certification .pdf" width="600px" height="850px"></iframe></div>
-<div class="cechild" data-aos="slide-left"><iframe class="d" src="JavaScriptcertificate.pdf" width="600px" height="850px"></iframe></div>
-<div class="cechild" width="100%" height="850px"data-aos="slide-left"><a href="https://api2.sololearn.com/v2/certificates/CC-U4L6ZJBX/image/jpg" width="100%" height="850px">
+<div class="cechild" data-aos="fade-in"><iframe class="d" src="HTML certification .pdf" width="600px" height="850px"></iframe></div>
+<div class="cechild" data-aos="fade-in"><iframe class="d" src="JavaScriptcertificate.pdf" width="600px" height="850px"></iframe></div>
+<div class="cechild" width="100%" height="850px"data-aos="fade-in"><a href="https://api2.sololearn.com/v2/certificates/CC-U4L6ZJBX/image/jpg" width="100%" height="850px">
 <img src="65C8A70C-95F7-453D-8221-F6040F565406.jpeg" alt="sololearnhtmlcertificate" width="100%" height="850px" class="ce">
 </a></div>
 </div>
