--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <div id="animation-wrapper"></div>
 <!-------------header----------------->
 <header>
-<div class="container">
+<div data-aos="fade-in" class="container">
 <h1 id="h1">Hi! I'm<span class="auto-typeh1"></span></h1>
 </div>
 </header>
 <!--        -->
 <main>
 <!--        -->
-<div id="am">
+<div data-aos="fade-in" id="am">
   <div class="container">
   <h2 id="h2am">About<span class="auto-typeh2am"></span></h2>
   </div>
@@ -25,7 +25,7 @@
 </div>
 </div>
 <!--        -->
-<div id="edu">
+<div data-aos="fade-in" id="edu">
  <div class="container">
   <h2 id="h2edu">My<span class="auto-typeh2edu"></span></h2>
   </div>
@@ -34,7 +34,7 @@
 </div>
 </div>
 <!--        -->
-<div id="ex">
+<div data-aos="fade-in" id="ex">
 <div class="container">
   <h2  id="h2ex">My<span class="auto-typeh2ex"></span></h2>
   </div>
@@ -43,10 +43,10 @@
 </div>
 </div>
 <!--        -->
+<div id="co" data-aos="fade-in" class="co">
 <div class="container">
   <h2 id="h2co">My<span class="auto-typeh2co"></span></h2>
   </div>
-<div id="co" class="co">
 <img src="" alt="html" class="co" id="htmlco" data-aos="fade-in">
   <img src="" alt="css" class="co" id="cssco" data-aos="fade-in">
   <img src="" alt="javascript" class="co" id="jsco" data-aos="fade-in">
@@ -61,7 +61,7 @@
 </div>
 	<!--        -->
 <div id="ce" class="ce">
-<div class="container">
+<div data-aos="fade-in" class="container">
 <h2 id="h2ce">My<span class="auto-typeh2ce"></span></h2>
 </div>
 <div class="cechild" data-aos="fade-in"><iframe class="d" src="HTML certification .pdf" width="600px" height="850px"></iframe></div>
@@ -74,13 +74,13 @@
 </main>
 <footer id="footer">
 <!--        -->
-<div class="container">
+<div data-aos="fade-in" class="container">
 <h3 id="h3con">Contact<span class="auto-typeh3con"></span></h3>
 </div>
 <p id="pem"></p>
 <p id="pp"></p>
 <!--        -->
-<div class="container">
+<div data-aos="fade-in" class="container">
 <h3 id="h3f">Follow<span class="auto-typeh3f"></span></h3>
 </div>
 <div id="f" class="f">
