--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 <!--        -->
 <p id="pc"><p>
 </footer>
+<script type="module" src="jsx-file.js"></script>
 <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 <script src="three.r134.min.js"></script>
 <script src="vanta.net.min.js"></script>
