--- a/index.html
+++ b/index.html
@@ -16,14 +16,7 @@
 <!--        -->
 <main>
 <!--        -->
-<div data-aos="fade-in" id="am">
-  <div class="container">
-  <h2 id="h2am">About<span class="auto-typeh2am"></span></h2>
-  </div>
-  <div class="container">
-<p id="pam">I'm<span class="auto-typepam"></span></p>
-</div>
-</div>
+<div id=amroot></div>
 <!--        -->
 <div data-aos="fade-in" id="edu">
  <div class="container">
