--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
 <!--        -->
 <p id="pc"><p>
 </footer>
-<script type="module" src="jsx-file.js"></script>
-<script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
-<script src="three.r134.min.js"></script>
-<script src="vanta.net.min.js"></script>
-<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-<script src="script.js"></script>
+<script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js" defer></script>
+<script type="module" src="jsx-file.js" defer></script>
+<script src="three.r134.min.js" defer></script>
+<script src="vanta.net.min.js" defer></script>
+<script src="https://unpkg.com/aos@next/dist/aos.js" defer></script>
+<script src="script.js"defer></script>
 <!--
 <script src="CDN/library"></script>
 ex= <script src"https://teach.gemimo.com/bouncy.js"></script>
