--- a/index.html
+++ b/index.html
@@ -6,61 +6,60 @@
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body id="body">
-  <div id="animation-wrapper"></div>
 <!-------------header----------------->
 <header>
-<div data-aos="fade-in" class="container">
-<h1 id="h1">Hi! I'm<span class="auto-typeh1"></span></h1>
+<div class="container">
+<h1 id="h1">Hi! I'm Steven Miller</h1>
 </div>
 </header>
 <!--        -->
 <main>
 <!--        -->
-<div id=amroot></div>
+<div id="amroot"></div>
 <!--        -->
-<div data-aos="fade-in" id="edu">
+<div id="edu">
  <div class="container">
-  <h2 id="h2edu">My<span class="auto-typeh2edu"></span></h2>
+  <h2 id="h2edu">My Education</h2>
   </div>
  <div class="container">
-<p id="pedu">I've<span class="auto-typepedu"></span></p>
+<p id="pedu">Ive graduated from Alta High School in Sandy,UT in the year 2012. I went on to study at Brigham Young University in Provo, Ut. </p>
 </div>
 </div>
 <!--        -->
-<div data-aos="fade-in" id="ex">
+<div id="ex">
 <div class="container">
-  <h2  id="h2ex">My<span class="auto-typeh2ex"></span></h2>
+  <h2  id="h2ex">My Experience </h2>
   </div>
  <div class="container">
-<p id="pex">I've been a<span class="auto-typepex"></span></p>
+<p id="pex">I've been a Master Fire Alarm Technician, a Customer Service Representative and a Seafood Processor. </p>
 </div>
 </div>
 <!--        -->
-<div id="co" data-aos="fade-in" class="co">
+<div id="co" class="co">
 <div class="container">
-  <h2 id="h2co">My<span class="auto-typeh2co"></span></h2>
+  <h2 id="h2co">My Competencies</h2>
   </div>
-<img src="" alt="html" class="co" id="htmlco" data-aos="fade-in">
-  <img src="" alt="css" class="co" id="cssco" data-aos="fade-in">
-  <img src="" alt="javascript" class="co" id="jsco" data-aos="fade-in">
-  <img src="" alt="sql" class="co"id="sqlco" data-aos="fade-in">
-<img src="" alt="python" class="co"id="pythonco" data-aos="fade-in">
-<img src="" alt="json" class="co" id="jsonco" data-aos="fade-in">
-<img src="" alt="c#" class="co" id="csharpco" data-aos="fade-in">
-<img src="" alt="c++" class="co" id="cppco" data-aos="fade-in">
-<img src=""alt="git" class="co" id="gitco" data-aos="fade-in">
-<img src=""alt="react" class="co" id="reactco" data-aos="fade-in">
-<img src=""alt="github" class="co" id="githubco" data-aos="fade-in">
+<img src="" alt="html" class="co" id="htmlco" >
+  <img src="" alt="css" class="co" id="cssco" >
+  <img src="" alt="javascript" class="co" id="jsco" >
+  <img src="" alt="sql" class="co"id="sqlco" >
+<img src="" alt="python" class="co"id="pythonco" >
+<img src="" alt="json" class="co" id="jsonco" >
+<img src="" alt="c#" class="co" id="csharpco" >
+<img src="" alt="c++" class="co" id="cppco" >
+<img src=""alt="git" class="co" id="gitco" >
+<img src=""alt="react" class="co" id="reactco" >
+<img src=""alt="github" class="co" id="githubco" >
 </div>
 	<!--        -->
 <div id="ce" class="ce">
-<div data-aos="fade-in" class="container">
-<h2 id="h2ce">My<span class="auto-typeh2ce"></span></h2>
+<div  class="container">
+<h2 id="h2ce">My Certification</h2>
 </div>
-<div class="cechild" data-aos="fade-in"><iframe class="d" src="HTML certification .pdf" width="600px" height="850px"></iframe></div>
-<div class="cechild" data-aos="fade-in"><iframe class="d" src="JavaScriptcertificate.pdf" width="600px" height="850px"></iframe></div>
-<div class="cechild" data-aos="fade-in"><iframe class="d" src="SQLcertificate.pdf" width="600px" height="850px"></iframe></div>
-<div class="cechild" width="100%" height="850px"data-aos="fade-in"><a href="https://api2.sololearn.com/v2/certificates/CC-U4L6ZJBX/image/jpg" width="100%" height="850px">
+<div class="cechild" ><iframe class="d" src="HTML certification .pdf" width="600px" height="850px"></iframe></div>
+<div class="cechild" ><iframe class="d" src="JavaScriptcertificate.pdf" width="600px" height="850px"></iframe></div>
+<div class="cechild" ><iframe class="d" src="SQLcertificate.pdf" width="600px" height="850px"></iframe></div>
+<div class="cechild" width="100%" height="850px"><a href="https://api2.sololearn.com/v2/certificates/CC-U4L6ZJBX/image/jpg" width="100%" height="850px">
 <img src="65C8A70C-95F7-453D-8221-F6040F565406.jpeg" alt="sololearnhtmlcertificate" width="100%" height="850px" class="ce">
 </a></div>
 </div>
@@ -68,14 +67,14 @@
 </main>
 <footer id="footer">
 <!--        -->
-<div data-aos="fade-in" class="container">
-<h3 id="h3con">Contact<span class="auto-typeh3con"></span></h3>
+<div class="container">
+<h3 id="h3con">Contact Me</h3>
 </div>
-<p id="pem"></p>
-<p id="pp"></p>
+<p id="pem">sem2093@gmail.com</p>
+<p id="pp">937-474-9664</p>
 <!--        -->
-<div data-aos="fade-in" class="container">
-<h3 id="h3f">Follow<span class="auto-typeh3f"></span></h3>
+<div class="container">
+<h3 id="h3f">Follow Me</h3>
 </div>
 <div id="f" class="f">
 <a href="https://www.twitter.com/@sem2093" class="d">
@@ -89,7 +88,7 @@
 	</a>
 </div>
 <!--        -->
-<p id="pc"><p>
+<p id="pc">&copy; Steven Miller 2023 All rights reserved</p>
 </footer>
 <script type="module" src="jsx-file.js" defer></script>
 <script src="script.js"defer></script>
