--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 <body id="body">
 <!-------------header----------------->
 <header>
-<div class="container">
-<h1 id="h1">Hi! I'm Steven Miller</h1>
-</div>
+<div id="root"></div>
 </header>
 <!--        -->
 <main>
