--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>Steven Miller</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <script type="module" src="jsx-file.js"></script>
 </head>
 <body id="body">
 <!-------------header----------------->
@@ -88,7 +89,6 @@
 <!--        -->
 <p id="pc">&copy; Steven Miller 2023 All rights reserved</p>
 </footer>
-<script type="module" src="jsx-file.js" defer></script>
 <script src="script.js"defer></script>
 <!--
 <script src="CDN/library"></script>
