--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
 <p id="pc">&copy; Steven Miller 2023 All rights reserved</p>
 </footer>
 <script src="script.js"defer></script>
+<script src="https://cdn.jsdelivr.net/npm/babel-standalone@7.14.7/babel.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/babel-standalone@7.14.7/preset-react.min.js"></script>
 <!--
 <script src="CDN/library"></script>
 ex= <script src"https://teach.gemimo.com/bouncy.js"></script>
